Add WinVersionLie and fix ddrawex.dll

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -27,6 +27,8 @@ EnableDdrawWrapper         = 0
 EnableD3d9Wrapper          = 0
 EnableDinput8Wrapper       = 0
 EnableDsoundWrapper        = 0
+WinVersionLie              = off
+WinVersionLieSP            = 0
 ForceTermination           = 0
 HandleExceptions           = 0
 ResetScreenRes             = 0
