Change how the artifacts are uploaded

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [Debug, Release, dx7, dx8]
+        config: [Debug, Release]
         platform: [Win32]
 
     steps:
@@ -29,8 +29,26 @@ jobs:
     - uses: Trass3r/setup-cpp@master
     - name: Build
       run: msbuild /m /p:Configuration=${{ matrix.config }} /p:Platform=${{ matrix.platform }} dxwrapper.sln
-    - uses: actions/upload-artifact@v4
+    - name: Upload DX7 Artifacts
+      if: ${{ matrix.config == 'Release' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: dx7 game binaries
+        path: bin/${{ matrix.config }}/dx7/*
+    - name: Upload DX8 Artifacts
+      if: ${{ matrix.config == 'Release' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: dx8 game binaries
+        path: bin/${{ matrix.config }}/dx8/*
+    - name: Upload DX9 Artifacts
+      if: ${{ matrix.config == 'Release' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: dx9 game binaries
+        path: bin/${{ matrix.config }}/dx9/*
+    - name: Upload Matrix Artifacts
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.config }} binaries
-        path: |
-          bin/${{ matrix.config }}/*
+        path: bin/${{ matrix.config }}/*
