--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -162,3 +162,5 @@ VerificationBytes          = 0x00
 ResetMemoryAfter           = 0
 AddressPointer             = 0x00000000
 BytesToWrite               = 0x00
+PatternString              =
+BytesToWrite               = 0x00
