--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -95,6 +95,9 @@
     <Filter Include="ddraw\Shaders">
       <UniqueIdentifier>{6679859a-ec10-4d1f-9fc3-7426d4436a23}</UniqueIdentifier>
     </Filter>
+    <Filter Include="External\Hooking.Patterns">
+      <UniqueIdentifier>{a97108cd-8745-4ced-8e19-d702a7e16847}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libraries\dwmapi.cpp">
@@ -885,6 +888,9 @@
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.3.2\Win32\Version.cpp">
       <Filter>DDrawCompat\v0.3.2</Filter>
+    </ClCompile>
+    <ClCompile Include="External\Hooking.Patterns\Hooking.Patterns.cpp">
+      <Filter>External\Hooking.Patterns</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1876,6 +1882,9 @@
     </ClInclude>
     <ClInclude Include="Dllmain\Resource.h">
       <Filter>Dllmain</Filter>
+    </ClInclude>
+    <ClInclude Include="External\Hooking.Patterns\Hooking.Patterns.h">
+      <Filter>External\Hooking.Patterns</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
