Move Comdlg to an ini option

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -26,6 +26,7 @@ EnableDdrawWrapper         = 0
 EnableD3d9Wrapper          = 0
 EnableDinput8Wrapper       = 0
 EnableDsoundWrapper        = 0
+EnableOpenDialogHook       = 0
 WinVersionLie              = off
 WinVersionLieSP            = 0
 HandleExceptions           = 0
