Add option for DdrawIntroVideoFix

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -51,6 +51,7 @@ DdrawEmulateLock           = 0
 DdrawForceMipMapAutoGen    = 0
 DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
+DdrawIntroVideoFix         = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
