--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -66,6 +66,7 @@ DdrawForceMipMapAutoGen    = 0
 DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
+DdrawIntroVideoFix         = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
