Detect environment cube map shotgun approach
#136

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -89,6 +89,7 @@ DdrawMaintainAspectRatio   = 0
 AnisotropicFiltering       = 0
 AntiAliasing               = 0
 CacheClipPlane             = 0
+EnvironmentMapCubeFix      = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 OverrideRefreshRate        = 0
