Prevent memory leak from StateBlocks creation

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -90,6 +90,7 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 CacheClipPlane             = 0
 EnvironmentMapCubeFix      = 0
+LimitStateBlocks           = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 OverrideRefreshRate        = 0
