Add ref to 3D Surface when creating a 3D Device

--- a/ddraw-testing/ddraw-testing.vcxproj
+++ b/ddraw-testing/ddraw-testing.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="..\External\Logging\Logging.cpp" />
     <ClCompile Include="IDirect3D.cpp" />
+    <ClCompile Include="IDirect3DDevice.cpp" />
     <ClCompile Include="IDirectDraw.cpp" />
     <ClCompile Include="IDirectDrawSurface.cpp" />
     <ClCompile Include="Logging.cpp" />
