Switch to using threads for CPU affinity

--- a/MakeShader/MakeShader.vcxproj.filters
+++ b/MakeShader/MakeShader.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClCompile Include="..\External\Hooking\HotPatch.cpp">
       <Filter>Hooking</Filter>
     </ClCompile>
+    <ClCompile Include="..\Utils\CPUAffinity.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Libraries">
