--- a/MakeShader/MakeShader.vcxproj
+++ b/MakeShader/MakeShader.vcxproj
@@ -58,6 +58,7 @@
     <ClCompile Include="..\External\Hooking\HotPatch.cpp" />
     <ClCompile Include="..\External\MemoryModule\MemoryModule.c" />
     <ClCompile Include="..\Libraries\d3dx9.cpp" />
+    <ClCompile Include="..\Utils\CPUAffinity.cpp" />
     <ClCompile Include="..\Utils\MyStrings.cpp" />
     <ClCompile Include="..\Utils\Utils.cpp" />
     <ClCompile Include="MakeShader.cpp" />
