--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -650,6 +650,7 @@ copy /Y "$(ProjectDir)Settings\Settings.ini" "$(TargetDir)Build\dxwrapper.ini" &
     <ClCompile Include="Logging\Logging.cpp" />
     <ClCompile Include="Settings\ReadParse.cpp" />
     <ClCompile Include="Settings\Settings.cpp" />
+    <ClCompile Include="Utils\CPUAffinity.cpp" />
     <ClCompile Include="Utils\Disasm.cpp" />
     <ClCompile Include="Utils\Fullscreen.cpp" />
     <ClCompile Include="Utils\MyStrings.cpp" />
