--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -895,6 +895,9 @@
     <ClCompile Include="GDI\Comdlg32.cpp">
       <Filter>GDI</Filter>
     </ClCompile>
+    <ClCompile Include="Utils\CPUAffinity.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Settings\AllSettings.ini">
