Add option to call End/Begin Scene only once
#343 #345

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -91,6 +91,7 @@ AntiAliasing               = 0
 CacheClipPlane             = 0
 EnvironmentMapCubeFix      = 0
 LimitStateBlocks           = 0
+ForceSingleBeginEndScene   = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 OverrideRefreshRate        = 0
