Fix gamma shader and reset textures
#345

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -98,6 +98,7 @@ OverrideRefreshRate        = 0
 LimitPerFrameFPS           = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
+WindowModeGammaShader      = 0
 SetInitialWindowPosition   = 0
 InitialWindowPositionLeft  = 0
 InitialWindowPositionTop   = 0
