Add option to Limit Texture Formats
#357

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -73,6 +73,7 @@ DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawEnableMouseHook       = 0
 DdrawDisableDirect3DCaps   = 0
+DdrawLimitTextureFormats   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawCustomWidth           = 0
 DdrawCustomHeight          = 0
