--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -57,6 +57,7 @@ DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawDisableDirect3DCaps   = 0
+DdrawLimitTextureFormats   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawCustomWidth           = 0
 DdrawCustomHeight          = 0
