Add option to limit display mode count
#348

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -96,6 +96,9 @@ ForceSingleBeginEndScene   = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 OverrideRefreshRate        = 0
+LimitDisplayModeCount      = 0
+CustomResolutionWidth      = 0
+CustomResolutionHeight     = 0
 LimitPerFrameFPS           = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
