Add option to display FPS
#351 #34

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -95,6 +95,7 @@ LimitStateBlocks           = 0
 ForceSingleBeginEndScene   = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
+ShowFPSCounter             = 0
 OverrideRefreshRate        = 0
 LimitDisplayModeCount      = 0
 CustomResolutionWidth      = 0
