--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -72,6 +72,7 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
+ShowFPSCounter             = 0
 OverrideRefreshRate        = 0
 LimitDisplayModeCount      = 0
 CustomResolutionWidth      = 0
