Rename CustomResolution options

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -75,8 +75,8 @@ ForceVsyncMode             = 0
 ShowFPSCounter             = 0
 OverrideRefreshRate        = 0
 LimitDisplayModeCount      = 0
-CustomResolutionWidth      = 0
-CustomResolutionHeight     = 0
+CustomDisplayWidth         = 0
+CustomDisplayHeight        = 0
 LimitPerFrameFPS           = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
