--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -71,6 +71,7 @@ DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawEnableMouseHook       = 0
 DdrawDisableDirect3DCaps   = 0
+DdrawKeepAllInterfaceCache = 0
 DdrawLimitTextureFormats   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawCustomWidth           = 0
