Rename & disable EnvironmentCubeMapFix by default
#379 #136

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -68,6 +68,7 @@ DdrawMaintainAspectRatio   = 0
 [d3d9]
 AnisotropicFiltering       = 0
 AntiAliasing               = 0
+EnvironmentCubeMapFix      = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 ShowFPSCounter             = 0
