--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -89,7 +89,7 @@ DdrawMaintainAspectRatio   = 0
 AnisotropicFiltering       = 0
 AntiAliasing               = 0
 CacheClipPlane             = 0
-EnvironmentMapCubeFix      = 0
+EnvironmentCubeMapFix      = 0
 LimitStateBlocks           = 0
 ForceSingleBeginEndScene   = 0
 EnableVSync                = 0
