--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -668,6 +668,7 @@ copy /Y "$(ProjectDir)Settings\Settings.ini" "$(TargetDir)Build\dxwrapper.ini" &
     <ClInclude Include="d3d9\AddressLookupTable.h" />
     <ClInclude Include="d3d9\d3d9.h" />
     <ClInclude Include="d3d9\d3d9External.h" />
+    <ClInclude Include="d3d9\d3d9Shared.h" />
     <ClInclude Include="d3d9\DebugOverlay.h" />
     <ClInclude Include="d3d9\IDirect3D9Ex.h" />
     <ClInclude Include="d3d9\IDirect3DCubeTexture9.h" />
