Fix PerformanceCounter update issues
#361

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -30,6 +30,7 @@ EnableDsoundWrapper        = 0
 EnableOpenDialogHook       = 0
 WinVersionLie              = off
 WinVersionLieSP            = 0
+FixPerfCounterUptime       = 0
 ForceTermination           = 0
 HandleExceptions           = 0
 ResetScreenRes             = 0
