--- a/MakeShader/MakeShader.vcxproj
+++ b/MakeShader/MakeShader.vcxproj
@@ -58,6 +58,7 @@
     <ClCompile Include="..\External\Hooking\HotPatch.cpp" />
     <ClCompile Include="..\External\MemoryModule\MemoryModule.c" />
     <ClCompile Include="..\Libraries\d3dx9.cpp" />
+    <ClCompile Include="..\Libraries\winmm.cpp" />
     <ClCompile Include="..\Utils\CPUAffinity.cpp" />
     <ClCompile Include="..\Utils\MyStrings.cpp" />
     <ClCompile Include="..\Utils\Utils.cpp" />
@@ -67,6 +68,7 @@
     <ClInclude Include="..\External\Hooking\Hook.h" />
     <ClInclude Include="..\External\MemoryModule\MemoryModule.h" />
     <ClInclude Include="..\Libraries\d3dx9.h" />
+    <ClInclude Include="..\Libraries\winmm.h" />
     <ClInclude Include="..\Utils\Utils.h" />
     <ClInclude Include="Logging\Logging.h" />
   </ItemGroup>
