--- a/MakeShader/MakeShader.vcxproj.filters
+++ b/MakeShader/MakeShader.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="..\Utils\CPUAffinity.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="..\Libraries\winmm.cpp">
+      <Filter>Libraries</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Libraries">
@@ -59,6 +62,9 @@
     </ClInclude>
     <ClInclude Include="..\External\Hooking\Hook.h">
       <Filter>Hooking</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Libraries\winmm.h">
+      <Filter>Libraries</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
