--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -111,6 +111,7 @@ FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
+SetPOW2Caps                = 0
 EnableImgui                = 0
 SetSwapEffectShim          = 0
 DisableMaxWindowedMode     = 0
