Add option to expand the size of the surface

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -62,6 +62,7 @@ DdrawAutoFrameSkip         = 0
 DdrawFillSurfaceColor      = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
+DdrawExtraEmulationSize    = 0
 DdrawForceMipMapAutoGen    = 0
 DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
