--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -19,6 +19,7 @@ LoadFromScriptsOnly        = 0
 [Compatibility]
 Dd7to9                     = 0
 D3d8to9                    = 0
+D3d9to9Ex                  = 0
 DDrawCompat                = 0
 Dinputto8                  = 0
 DisableGameUX              = 0
@@ -46,6 +47,8 @@ DdrawOverrideBitMode       = 0
 DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
+DdrawExtraEmulationSize    = 0
+DdrawKeepAllInterfaceCache = 0
 DdrawForceMipMapAutoGen    = 0
 DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
