Add option to use Direct3D9 caps for ddraw
#328

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -54,6 +54,7 @@ DDrawCompatNoProcAffinity  = 0
 
 [ddraw]
 DdrawOverrideBitMode       = 0
+DdrawUseDirect3D9Caps      = 0
 DdrawResolutionHack        = 0
 DirectShowEmulation        = 0
 
