--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -42,6 +42,7 @@ DDrawCompatNoProcAffinity  = 0
 
 [ddraw]
 DdrawOverrideBitMode       = 0
+DdrawUseDirect3D9Caps      = 0
 
 [Dd7to9]
 DdrawAutoFrameSkip         = 0
