--- a/Stub/stub.vcxproj
+++ b/Stub/stub.vcxproj
@@ -194,9 +194,9 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\wsock32.dll" &gt
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\External\Hooking\Disasm.cpp" />
     <ClCompile Include="..\External\Hooking\Hook.cpp" />
     <ClCompile Include="..\External\Hooking\HotPatch.cpp" />
-    <ClCompile Include="..\External\Hooking\IATPatch.cpp" />
     <ClCompile Include="..\External\MemoryModule\MemoryModule.c" />
     <ClCompile Include="..\Settings\ReadParse.cpp" />
     <ClCompile Include="..\Wrappers\wrapper.cpp" />
@@ -213,6 +213,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\wsock32.dll" &gt
     <ResourceCompile Include="stub.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\External\Hooking\Disasm.h" />
     <ClInclude Include="..\External\Hooking\Hook.h" />
     <ClInclude Include="..\External\MemoryModule\MemoryModule.h" />
     <ClInclude Include="..\Wrappers\bcrypt.h" />
