Add option for DdrawClampVertexZDepth
#357

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -51,6 +51,7 @@ DdrawEmulateLock           = 0
 DdrawExtraEmulationSize    = 0
 DdrawKeepAllInterfaceCache = 0
 DdrawForceMipMapAutoGen    = 0
+DdrawClampVertexZDepth     = 0
 DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
 DdrawIntroVideoFix         = 0
@@ -58,7 +59,6 @@ DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
-DdrawAlternatePixelCenter  = 0
 DdrawLimitTextureFormats   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawCustomWidth           = 0
