--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -30,6 +30,7 @@ EnableDsoundWrapper        = 0
 EnableOpenDialogHook       = 0
 WinVersionLie              = off
 WinVersionLieSP            = 0
+FixPerfCounterUptime       = 0
 HandleExceptions           = 0
 SingleProcAffinity         = 0
 
