--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -644,7 +644,6 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClCompile Include="External\Hooking\Hook.cpp" />
     <ClCompile Include="External\Hooking\HotPatch.cpp" />
     <ClCompile Include="External\Logging\Logging.cpp" />
-    <ClCompile Include="External\MemoryModule\MemoryModule.c" />
     <ClCompile Include="GDI\Comdlg32.cpp" />
     <ClCompile Include="GDI\Gdi32.cpp" />
     <ClCompile Include="GDI\User32.cpp" />
@@ -660,6 +659,7 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClCompile Include="Utils\CPUAffinity.cpp" />
     <ClCompile Include="Utils\Disasm.cpp" />
     <ClCompile Include="Utils\Fullscreen.cpp" />
+    <ClCompile Include="Utils\MemoryModule.cpp" />
     <ClCompile Include="Utils\MyStrings.cpp" />
     <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="Utils\WriteMemory.cpp" />
